--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -25,5 +25,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile 'io.reactivex:rxkotlin:0.60.0'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
