--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     compile 'io.reactivex:rxkotlin:0.60.0'
-
+    compile 'org.apache.commons:commons-math3:3.6.1'
+    compile 'io.reactivex:rxjava-string:1.1.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
